fixed header showing projects in center on small screen-size

--- a/src/containers/greeting/Greeting.css
+++ b/src/containers/greeting/Greeting.css
@@ -47,7 +47,7 @@
   font-size: 40px;
   line-height: 40px;
   margin-right: 40px;
-  text-align: justify;
+  text-align: left;
   font-family: "Google Sans Medium";
 }
 
